tests/paczka1/fuzzy1/59962551.err
Error in line 1: fgxnZI S779 pp,p
Error in line 2: uM2Tn5f A836 86,4
Error in line 3: Xf9lwbpYHs S779 6,5
Error in line 17: fgxnZI S779 38,6
Error in line 18: 2nx S627 22,6
Error in line 26: fgxnZI A836 133,1
